MOD: workflow SNYK with secret token

--- a/.github/workflows/all_test.yml
+++ b/.github/workflows/all_test.yml
@@ -6,9 +6,26 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
+          cache: 'npm'
       - name: setup
         run: make setup
       - name: test
         run: make test
       - name: linter
         run: make lint
+  decrypt:
+    runs-on: ubuntu-latest
+    steps:
+      run: gpg --quiet --batch --yes --decrypt --passphrase="${{ secrets.SNYK_TOKEN }}" \
+           --output $HOME/my_secret my_secret.gpg
+  security:
+    needs: decrypt
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: $HOME/my_secret
