--- a/.github/workflows/all_test.yml
+++ b/.github/workflows/all_test.yml
@@ -18,6 +18,7 @@ jobs:
   decrypt:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - run: gpg --quiet --batch --yes --decrypt --passphrase="${{ secrets.SNYK_TOKEN }}" --output $HOME/my_secret my_secret.gpg
   security:
     needs: decrypt
