--- a/.github/workflows/all_test.yml
+++ b/.github/workflows/all_test.yml
@@ -24,8 +24,7 @@ jobs:
     needs: decrypt
     runs-on: ubuntu-latest
     steps:
-        run: SNYK_TOKEN=$(cat $HOME/my_secret)
+      - run: SNYK_TOKEN=$(cat $HOME/my_secret)
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
-
