--- a/.github/workflows/all_test.yml
+++ b/.github/workflows/all_test.yml
@@ -15,15 +15,11 @@ jobs:
         run: make test
       - name: linter
         run: make lint
-  decrypt:
+  decrypt_security:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - run: gpg --quiet --batch --yes --decrypt --passphrase="${{ secrets.SNYK_TOKEN }}" --output $HOME/my_secret my_secret.gpg
-  security:
-    needs: decrypt
-    runs-on: ubuntu-latest
-    steps:
       - run: SNYK_TOKEN=$(cat $HOME/my_secret)
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
