--- a/.github/workflows/all_test.yml
+++ b/.github/workflows/all_test.yml
@@ -20,9 +20,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: gpg --quiet --batch --yes --decrypt --passphrase="${{ secrets.SNYK_TOKEN }}" --output $HOME/my_secret my_secret.gpg
-      - run: cat $HOME/my_secret
+      - run: |
+          {
+            echo 'SNYK_TOKEN<<SNYK'
+            cat my_secret
+            echo SNYK
+          } >> $GITHUB_ENV
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
-        env:
-          SNYK_TOKEN: $HOME/my_secret
