--- a/.github/workflows/all_test.yml
+++ b/.github/workflows/all_test.yml
@@ -23,7 +23,7 @@ jobs:
       - run: |
           {
             echo 'SNYK_TOKEN<<EOF'
-            cat my_secret
+            cat $HOME/my_secret
             echo EOF
           } >> $GITHUB_ENV
       - uses: actions/checkout@master
