--- a/.github/workflows/all_test.yml
+++ b/.github/workflows/all_test.yml
@@ -26,6 +26,7 @@ jobs:
             cat $HOME/my_secret
             echo SNYK
           } >> $GITHUB_ENV
+      - run: echo $SNYK_TOKEN
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
