--- a/.github/workflows/all_test.yml
+++ b/.github/workflows/all_test.yml
@@ -27,6 +27,7 @@ jobs:
             echo SNYK
           } >> $GITHUB_ENV
       - run: echo $SNYK_TOKEN
+      - run: snyk auth $SNYK_TOKEN
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
