--- a/.github/workflows/all_test.yml
+++ b/.github/workflows/all_test.yml
@@ -18,15 +18,15 @@ jobs:
   decrypt_security:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - run: gpg --quiet --batch --yes --decrypt --passphrase="${{ secrets.SNYK_TOKEN }}" --output $HOME/my_secret my_secret.gpg
-      - run: |
-          {
-            echo 'SNYK_TOKEN<<SNYK'
-            cat $HOME/my_secret
-            echo SNYK
-          } >> $GITHUB_ENV
-      - run: echo $SNYK_TOKEN
+#      - uses: actions/checkout@v3
+#      - run: gpg --quiet --batch --yes --decrypt --passphrase="${{ secrets.SNYK_TOKEN }}" --output $HOME/my_secret my_secret.gpg
+#      - run: |
+#          {
+#            echo 'SNYK_TOKEN<<SNYK'
+#            cat $HOME/my_secret
+#            echo SNYK
+#          } >> $GITHUB_ENV
+#      - run: echo $SNYK_TOKEN
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
